  other tag APIs.  (Andrew Bennetts, #603395)

* Using bzr with `lp:` urls behind an http proxy should work.
  (Robert Collins, #558343)

* Windows installers no longer requires the Microsoft vcredist to be
  installed.
  (Martin [gz], Gary van der Merwe, #632465)

Improvements
************

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******

* Add ``tests/ssl_certs/ca.crt`` to the required test files list. Test
  involving the pycurl https test server fail otherwise when running
  selftest from an installed version. (Vincent Ladeuil, #651706)

* Fix tests that failed when run under ``LANG=C``.
  (Andrew Bennetts, #632387)


bzr 2.2.1
#########

:2.2.1: 2010-09-17

This is a bugfix release which also includes bugfixes from 2.0.6 and
2.1.3. None are critical, but upgrading is recommended for all users on
earlier 2.2 releases.

Bug Fixes
*********

* Additional merges after an unrelated branch has been merged with its
  history no longer crash when deleted files are involved.
  (Vincent Ladeuil, John Arbash Meinel, #375898)

* ``bzr add SYMLINK/FILE`` now works properly when the symlink points to a
  previously-unversioned directory within the tree: the directory is
  marked versioned too.
  (Martin Pool, #192859)

* ``bzr commit SYMLINK`` now works, rather than trying to commit the
  target of the symlink.
  (Martin Pool, John Arbash Meinel, #128562)

* ``bzr upgrade`` now creates the ``backup.bzr`` directory with the same
  permissions as ``.bzr`` directory on a POSIX OS.
  (Parth Malwankar, #262450)

* CommitBuilder now uses the committer instead of _config.username to generate
  the revision-id.  (Aaron Bentley, #614404)

* Configuration files in ``${BZR_HOME}`` are now written in an atomic
  way which should help avoid problems with concurrent writers.
  (Vincent Ladeuil, #525571)

* Cope with Microsoft FTP server that returns reply '250 Directory
  created' when mkdir succeeds.  (Martin Pool, #224373)
